--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,6 @@
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 </head>
-
 <body>
     <header>
         <div class="wrapper-content">
@@ -85,6 +84,7 @@
         </section>
         <section class="catalog">
             <div class="wrapper-content">
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Ffarmrazvitie&tabs=timeline&width=300&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 <h2 class="catalog__header">Наши услуги</h2>
                 <div class="catalog-wrapper">
                     <a href="reggaz.html" class="catalog-item">
