--- a/farm-razvitie/pages/gmp.html
+++ b/farm-razvitie/pages/gmp.html
@@ -68,30 +68,29 @@
             <div class="wrapper-content">
                 <div class="item-card">
                     <div class="item-card__img">
-                        <img src="../img/3.jpg" alt="">
-                        <img src="../img/33.jpg" alt="">
-                        <img src="../img/34.jpg" alt="">
+                        <img src="../img/7.jpg" alt="">
                     </div>
                     <div class="item-card__info">
-                        <h1 class="item-card__header">Регистрация медицинских газов</h1>
-                        <p class="item-card__text">Кислород газообразный медицинский является лекарственным препаратом, соответственно подлежит обязательной регистрации.</p>
-                        <p class="item-card__text">Кислород жидкий медицинский является фармацевтической субстанцией и он также подлежит обязательной регистрации (включению в государственный реестр лекарственных средств).</p>
-                        <p class="item-card__text">Регистрационное удостоверение на <a href="reglek.html">лекарственное</a> средство выдает Министерство здравоохранения РФ.</p>
+                        <h1 class="item-card__header">Внедрение правил GMP (лицензирование производства)</h1>
+                        <p class="item-card__text">Производство лекарственных средств (фармацевтической субстанций, ветеринарных препаратов) возможно только при соблюдении нескольких обязательных требований, одно из которых – наличие действующей лицензии на производство лекарственных средств (лицензии на производство фармацевтической субстанции, лицензии на производство ветеринарных препаратов).</p>
+                        <p class="item-card__text">Лицензию на производство лекарственных средств (в том числе фармацевтических субстанций) выдает Министерство промышленности и торговли РФ, лицензию на производство ветеринарных препаратов – Россельхознадзор РФ.</p>
+                        <p class="item-card__text">Согласно требованиям Федерального закона «Об обращении лекарственных средств» лицензия выдается, если производство лекарственных средств (в том числе и фармацевтических субстанций) или производство ветеринарных препаратов соответствует требованиям правил надлежащей производственной практики (правилам GMP).</p>
+                        <p class="item-card__text">На сегодняшний день действующими правилами GMP являются правила, утвержденные Решением Совета Евразийской экономической комиссии от 03.11.2016 № 77 «Об утверждении Правил надлежащей производственной практики Евразийского экономического союза» и Приказ Минпромторга России от 14.06.2013 № 916 «Правила надлежащей производственной практики».</p>
                         <p class="item-card__text">Наша компания оказывает услуги по регистрации кислорода, регистрации ксенона и других медицинских газов:</p>
                         <ul class="item-card__text">
-                            <li>разработка документов, входящих в состав регистрационного досье;</li>
-                            <li>проверка регистрационного досье, если Заказчик подготовил его самостоятельно;</li>
-                            <li>корректировка документов регистрационного досье;</li>
-                            <li>разработка части документов, входящих в состав регистрационного досье, в том числе разработка НД (ФСП) и т.п.;</li>
-                            <li>подготовка документов на проведение фармацевтической экспертизы;</li>
-                            <li>подготовка литературных обзоров по доклиническим и клиническим исследованиям;</li>
-                            <li>помощь в проведении валидаций методик и валидации технологического процесса;</li>
-                            <li>внесение изменений в регистрационное досье на зарегистрированное лекарственное средство;</li>
-                            <li>полное сопровождение регистрации – от составления документов, до получения регистрационного удостоверения в Москве</li>
+                            <li>экспертизу действующей на предприятии документации и деятельности на соответствие требованиям правил GMP;</li>
+                            <li>разработку стандартных операционных процедур (СОП);</li>
+                            <li>разработку основного досье производственной площадки (сайт мастер файл);</li>
+                            <li>разработку валидационного мастер плана;</li>
+                            <li>разработку спецификаций на продукцию, разработка планов отбора проб, технологических инструкций и т.п.;</li>
+                            <li>разработку протоколов на серию (или маршрутных карт);</li>
+                            <li>разработку промышленного регламента;</li>
+                            <li>помощь при прохождении лицензионной проверки;</li>
+                            <li>подготовку пакета документов на получение лицензии на производство;</li>
+                            <li>подготовку документов на получение заключения производства на соответствие требованиям правил GMP.</li>
+                            <li>сопровождение процесса лицензирования</li>
                         </ul>
-                        <p class="item-card__text">Отметим, что регистрационное удостоверение на лекарственное средство можно получить, если в составе регистрационного досье имеется лицензия на производство данного лекарственного средства</p>
-                        <p class="item-card__text">Сотрудники нашей компании имеют большой опыт работы на газовых предприятиях, поэтому готовы оказать полный спектр услуг касающейся производства и регистрации медицинских газов сжатых и сжиженных.</p>
-                        <p class="item-card__text">Наша организация имеет представителя в Москве, мы сопровождаем все процессы, связанные с получением регистрационных удостоверений.</p>
+                        <p class="item-card__text">Наша компания осуществляет внедрение правил GMP по ГОСТ ISO 22716-2013 для производителей парфюмерно-косметических средств.</p>
                     </div>
                 </div>
             </div>
