--- a/farm-razvitie/pages/regsub.html
+++ b/farm-razvitie/pages/regsub.html
@@ -64,67 +64,27 @@
         </div>
     </header>
     <main>
-        <section class="catalog">
+        <section>
             <div class="wrapper-content">
-                <h2 class="catalog__header">Наши услуги</h2>
-                <div class="catalog-wrapper">
-                    <a href="reggaz.html" class="catalog-item">
-                        <div class="catalog-item-img"></div>
-                        <p class="catalog-item-header">Регистрация медицинских газов</p>
-                        <ul class="additional-services">
-                            <li>-Регистрация жидкого кислорода</li>
-                            <li>-Регистрация газообразного кислорода</li>
-                            <li>-Регистрация ксенона и других медицинских газов</li>
+                <div class="item-card">
+                    <div class="item-card__img">
+                        <img src="../img/6.jpg" alt="">
+                        <img src="../img/66.jpg" alt="">
+                    </div>
+                    <div class="item-card__info">
+                        <h1 class="item-card__header">Регистрация фармацевтических субстанций</h1>
+                        <p class="item-card__text">Наша компания оказывает услуги по регистрации фармацевтической субстанции (включение фармацевтической субстанции в государственный реестр лекарственных средств):</p>
+                        <ul class="item-card__text">
+                            <li>разработка документов, входящих в состав регистрационного досье;</li>
+                            <li>проверка регистрационного досье, если Заказчик подготовил его самостоятельно;</li>
+                            <li>корректировка документов регистрационного досье;</li>
+                            <li>разработка части документов, входящих в состав регистрационного досье, в том числе разработка НД (ФСП), СТО (ТУ) и т.п.;</li>
+                            <li>подготовка документов на проведение фармацевтической экспертизы;</li>
+                            <li>помощь в проведении валидаций методик и валидации технологического процесса;</li>
+                            <li>внесение изменений в регистрационное досье на зарегистрированное лекарственное средство;</li>
+                            <li>полное сопровождение регистрации – от составления документов, до получения регистрационного удостоверения в Москве</li>
                         </ul>
-                        <button class="catalog-button">Узнать подробнее</button>
-                    </a>
-                    <a href="reglec.html" class="catalog-item">
-                        <div class="catalog-item-img health"></div>
-                        <p class="catalog-item-header">Регистрация лекарств</p>
-                        <ul class="additional-services">
-                            <li>-Регистрация лекарственных средств</li>
-                            <li>-Регистрационное досье</li>
-                            <li>-Внесение изменений в регистрационное досье</li>
-                        </ul>
-                        <button class="catalog-button">Узнать подробнее</button>
-                    </a>
-                    <a href="regvet.html" class="catalog-item">
-                        <div class="catalog-item-img vet"></div>
-                        <p class="catalog-item-header">Регистрация ветеринарных препаратов</p>
-                        <ul class="additional-services">
-                            <li>-Регистрация ветеринарных препаратов</li>
-                            <li>-Регистрация фармацевтических субстанций для ветеринарии</li>
-                        </ul>
-                        <button class="catalog-button">Узнать подробнее</button>
-                    </a>
-                    <a href="regsubs.html" class="catalog-item">
-                        <div class="catalog-item-img subs"></div>
-                        <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
-                        <ul class="additional-services">
-                            <li>-Регистрационное досье</li>
-                            <li>-Внесение изменений</li>
-                        </ul>
-                        <button class="catalog-button">Узнать подробнее</button>
-                    </a>
-                    <a href="gmp.html" class="catalog-item">
-                        <div class="catalog-item-img gmp"></div>
-                        <p class="catalog-item-header">Внедрение правил GMP (лицензия на производство)</p>
-                        <ul class="additional-services">
-                            <li>-Разработка СОП и др. документации</li>
-                            <li>-Разработка промышленного регламента</li>
-                            <li>-Получение лицензии на производство лекарственных средств</li>
-                        </ul>
-                        <button class="catalog-button">Узнать подробнее</button>
-                    </a>
-                    <a href="regcorm.html" class="catalog-item">
-                        <div class="catalog-item-img corm"></div>
-                        <p class="catalog-item-header">Регистрация кормовых добавок</p>
-                        <ul class="additional-services">
-                            <li>-Регистрация кормовых добавок</li>
-                            <li>-Разработка документации</li>
-                        </ul>
-                        <button class="catalog-button">Узнать подробнее</button>
-                    </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -138,10 +98,10 @@
                         <a class="footer-item__text" href="../index.html">Главная</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="pages/about.html">О нас</a>
+                        <a class="footer-item__text" href="about.html">О нас</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="pages/contacts.html">Контакты</a>
+                        <a class="footer-item__text" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
             </div>
