--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -78,7 +78,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="reglec.html" class="catalog-item">
+                    <a href="reglek.html" class="catalog-item">
                         <div class="catalog-item-img health"></div>
                         <p class="catalog-item-header">Регистрация лекарств</p>
                         <ul class="additional-services">
