--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -87,7 +87,7 @@
                 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Ffarmrazvitie&tabs=timeline&width=300&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 <h2 class="catalog__header">Наши услуги</h2>
                 <div class="catalog-wrapper">
-                    <a href="reggaz.html" class="catalog-item">
+                    <a href="pages/reggaz.html" class="catalog-item">
                         <div class="catalog-item-img"></div>
                         <p class="catalog-item-header">Регистрация медицинских газов</p>
                         <ul class="additional-services">
@@ -97,7 +97,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="reglec.html" class="catalog-item">
+                    <a href="pages/reglek.html" class="catalog-item">
                         <div class="catalog-item-img health"></div>
                         <p class="catalog-item-header">Регистрация лекарств</p>
                         <ul class="additional-services">
@@ -107,7 +107,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="regvet.html" class="catalog-item">
+                    <a href="pages/regvet.html" class="catalog-item">
                         <div class="catalog-item-img vet"></div>
                         <p class="catalog-item-header">Регистрация ветеринарных препаратов</p>
                         <ul class="additional-services">
@@ -116,7 +116,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="regsubs.html" class="catalog-item">
+                    <a href="pages/regsubs.html" class="catalog-item">
                         <div class="catalog-item-img subs"></div>
                         <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
                         <ul class="additional-services">
@@ -125,7 +125,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="gmp.html" class="catalog-item">
+                    <a href="pages/gmp.html" class="catalog-item">
                         <div class="catalog-item-img gmp"></div>
                         <p class="catalog-item-header">Внедрение правил GMP (лицензия на производство)</p>
                         <ul class="additional-services">
@@ -135,7 +135,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="regcorm.html" class="catalog-item">
+                    <a href="pages/regcorm.html" class="catalog-item">
                         <div class="catalog-item-img corm"></div>
                         <p class="catalog-item-header">Регистрация кормовых добавок</p>
                         <ul class="additional-services">
