--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -116,7 +116,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="regcorm.html" class="catalog-item">
+                    <a href="regkorm.html" class="catalog-item">
                         <div class="catalog-item-img corm"></div>
                         <p class="catalog-item-header">Регистрация кормовых добавок</p>
                         <ul class="additional-services">
