--- a/farm-razvitie/pages/about.html
+++ b/farm-razvitie/pages/about.html
@@ -131,7 +131,7 @@
         </div>
     </footer>
 </body>
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </html>
