--- a/farm-razvitie/pages/contacts.html
+++ b/farm-razvitie/pages/contacts.html
@@ -108,7 +108,7 @@
         </div>
     </footer>
 </body>
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </html>
