--- a/farm-razvitie/pages/reglek.html
+++ b/farm-razvitie/pages/reglek.html
@@ -129,7 +129,7 @@
         </div>
     </footer>
 </body>
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </html>
