--- a/farm-razvitie/pages/regsub.html
+++ b/farm-razvitie/pages/regsub.html
@@ -122,7 +122,7 @@
         </div>
     </footer>
 </body>
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </html>
