--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -162,7 +162,7 @@
         </div>
     </footer>
 </body>
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </html>
