--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -24,7 +24,7 @@
             <div class="header-top flex jc-between">
                 <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
-                <a class="header-top__main" href="/">Фарм-Развитие</a>
+                <a class="header-top__main" href="index.html">Фарм-Развитие</a>
                 <div class="flex">
                 <a class="header-top__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
                     <img src="img/sn_facebook.svg" alt="">
@@ -48,7 +48,7 @@
             <div class="mobile-menu">
                 <div class="close"></div>
                 <div class="mobile-nav">
-                    <a href="/index.html">Главная</a>
+                    <a class="active" href="/index.html">Главная</a>
                     <a href="pages/services.html">Наши услуги</a>
                     <a href="pages/about.html">О компании</a>
                     <a href="pages/contacts.html">Контакты</a>
