--- a/farm-razvitie/pages/about.html
+++ b/farm-razvitie/pages/about.html
@@ -51,7 +51,7 @@
                 <div class="mobile-nav">
                     <a href="../index.html">Главная</a>
                     <a href="services.html">Наши услуги</a>
-                    <a href="about.html">О компании</a>
+                    <a class="active" href="about.html">О компании</a>
                     <a href="contacts.html">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
