--- a/farm-razvitie/pages/contacts.html
+++ b/farm-razvitie/pages/contacts.html
@@ -52,7 +52,7 @@
                     <a href="../index.html">Главная</a>
                     <a href="services.html">Наши услуги</a>
                     <a href="about.html">О компании</a>
-                    <a href="contacts.html">Контакты</a>
+                    <a class="active" href="contacts.html">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
                     <a class="mob__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
