--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -50,7 +50,7 @@
                 <div class="close"></div>
                 <div class="mobile-nav">
                     <a href="../index.html">Главная</a>
-                    <a href="services.html">Наши услуги</a>
+                    <a class="active" href="services.html">Наши услуги</a>
                     <a href="about.html">О компании</a>
                     <a href="contacts.html">Контакты</a>
                 </div>
