--- a/farm-razvitie/pages/contacts.html
+++ b/farm-razvitie/pages/contacts.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
-    <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
+    <title>Фарм-Развитие - Контакты</title>
     <link rel="shortcut icon" href="../img/favicon.ico"/>
     <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="../fonts/Romul.ttf" rel="stylesheet">
@@ -64,7 +64,7 @@
         </div>
     </header>
     <main>
-        <div class="wrapper-content">
+        <div class="wrapper-content contacts">
             <h1 class="about-header">Наши контакты</h1>
             <p>ООО "ФАРМ-РАЗВИТИЕ"</p>
             <p>ИНН 5445013758 / КПП 230101001</p>
