--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
-    <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
+    <title>Фарм-Развитие - Каталог услуг. Регистрация медицинских препаратов и газов по всей России</title>
     <link rel="shortcut icon" href="../img/favicon.ico"/>
     <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="../fonts/Romul.ttf" rel="stylesheet">
@@ -66,7 +66,7 @@
     <main>
         <section class="catalog">
             <div class="wrapper-content">
-                <h2 class="catalog__header">Наши услуги</h2>
+                <h1 class="about-header">Наши услуги</h1>
                 <div class="catalog-wrapper">
                     <a href="reggaz.html" class="catalog-item">
                         <div class="catalog-item-img"></div>
