--- a/farm-razvitie/pages/about.html
+++ b/farm-razvitie/pages/about.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
-    <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
+    <title>Фарм-Развитие - О компании</title>
     <link rel="shortcut icon" href="../img/favicon.ico"/>
     <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="../fonts/Romul.ttf" rel="stylesheet">
