--- a/farm-razvitie/pages/reglek.html
+++ b/farm-razvitie/pages/reglek.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
-        content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
-    <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
+        content="На нашем сайте вы можете зарегистрировать медицинские и лекарственные препараты. Работаем по всей России, выгодные цены." />
+    <title>Фарм-Развитие - Регистрация лекарственных препаратов для медицинского применения по всей России</title>
     <link rel="shortcut icon" href="../img/favicon.ico"/>
     <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="../fonts/Romul.ttf" rel="stylesheet">
