--- a/farm-razvitie/pages/gmp.html
+++ b/farm-razvitie/pages/gmp.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
-        content="Внедрение правил GMP - регистрация, лицензирование производства. Работаем по всей России"/>
+        content="Внедрение правил GMP - регистрация, лицензирование производства. Работаем по всей России, выгодные цены."/>
     <title>Фарм-Развитие - внедрение правил GMP (лицензирование производства). Работаем по всей России.</title>
     <link rel="shortcut icon" href="../img/favicon.ico"/>
     <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
