--- a/farm-razvitie/pages/reggaz.html
+++ b/farm-razvitie/pages/reggaz.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
-        content="На нашем сайте вы можете зарегистрировать медицинские газы (кислород). Работаем по всей России." />
+        content="На нашем сайте вы можете зарегистрировать медицинские газы (кислород). Работаем по всей России, выгодные цены." />
     <title>Фарм-Развитие - регистрация медицинских газов (кислород) по всей России</title>
     <link rel="shortcut icon" href="../img/favicon.ico"/>
     <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
