--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -97,7 +97,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="regsubs.html" class="catalog-item">
+                    <a href="regsub.html" class="catalog-item">
                         <div class="catalog-item-img subs"></div>
                         <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
                         <ul class="additional-services">
