--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -48,7 +48,7 @@
             <div class="mobile-menu">
                 <div class="close"></div>
                 <div class="mobile-nav">
-                    <a class="active" href="/index.html">Главная</a>
+                    <a class="active" href="index.html">Главная</a>
                     <a href="pages/services.html">Наши услуги</a>
                     <a href="pages/about.html">О компании</a>
                     <a href="pages/contacts.html">Контакты</a>
@@ -56,7 +56,7 @@
                 <div class="mobile-bottom">
                     <a class="mob__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
                         <img src="img/sn_facebook.svg" alt="">
-                    </a>
+                    </a>а
                     <a class="mob__tel" href="tel:+78002017955">8(800) 201-79-55</a>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="pages/regsubs.html" class="catalog-item">
+                    <a href="pages/regsub.html" class="catalog-item">
                         <div class="catalog-item-img subs"></div>
                         <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
                         <ul class="additional-services">
