--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -138,10 +138,10 @@
                         <a class="footer-item__text" href="../index.html">Главная</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="pages/about.html">О нас</a>
+                        <a class="footer-item__text" href="about.html">О нас</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="pages/contacts.html">Контакты</a>
+                        <a class="footer-item__text" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
             </div>
