--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -154,7 +154,7 @@
                 <p class="footer-item__header">Навигация</p>
                 <ul>
                     <li>
-                        <a class="footer-item__text" href="/index.html">Главная</a>
+                        <a class="footer-item__text" href="index.html">Главная</a>
                     </li>
                     <li>
                         <a class="footer-item__text" href="pages/about.html">О нас</a>
