--- a/farm-razvitie/pages/reggaz.html
+++ b/farm-razvitie/pages/reggaz.html
@@ -25,7 +25,7 @@
             <div class="header-top flex jc-between">
                 <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
-                <a class="header-top__main" href="/">Фарм-Развитие</a>
+                <a class="header-top__main" href="../index.html">Фарм-Развитие</a>
                 <div class="flex">
                 <a class="header-top__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
                     <img src="../img/sn_facebook.svg" alt="">
