--- a/pwp/index.html
+++ b/pwp/index.html
@@ -215,9 +215,8 @@ ul.slick-dots {
           <div class="block1">
             <div class="pc_col _1">
               <div class="text-80 _1">Play agressive</div>
-              <div class="frame1 youtube">
+              <div class="frame1">
                 <div class="frame-img1">
-                  <iframe width="100%" height="650" src="https://www.youtube.com/embed/ihYdEuQUNaU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
