--- a/pwp/index.html
+++ b/pwp/index.html
@@ -218,6 +218,9 @@ ul.slick-dots {
               <div class="frame1">
                 <div class="frame-img1">
                 </div>
+                <video controls> 
+                  <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+                </video>
               </div>
             </div>
             <div class="pc_col _2">
