--- a/pwp/index.html
+++ b/pwp/index.html
@@ -217,7 +217,7 @@ ul.slick-dots {
               <div class="text-80 _1">Play agressive</div>
               <div class="frame1">
                 <video controls> 
-                  <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+                  <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
                 </video>
                 <div class="frame-img1">
                 </div>
