--- a/pwp/index.html
+++ b/pwp/index.html
@@ -216,10 +216,10 @@ ul.slick-dots {
             <div class="pc_col _1">
               <div class="text-80 _1">Play agressive</div>
               <div class="frame1">
-                <video controls> 
-                  <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
-                </video>
                 <div class="frame-img1">
+                  <video autoplay muted loop>
+                    <source src="images/video1.mp4" type="video/mp4">
+                  </video>
                 </div>
 
               </div>
