--- a/pwp/index.html
+++ b/pwp/index.html
@@ -100,7 +100,7 @@ ul.slick-dots {
   <div class="navbar">
     <div class="container w-container">
       <div class="nav-row">
-        <div class="logo-col"><a href="https://legionfarm.com/" class="logo w-inline-block"><img src="images/Logo.svg" loading="lazy" alt=""></a><h1 data-da="_1s,first,550">Legionfarm Coaching Service</h1></div>
+        <div class="logo-col"><a href="https://legionfarm.com/" class="logo w-inline-block"><img src="images/Logo.svg" loading="lazy" alt=""></a></div>
         <div data-w-id="d65b4d43-c3ba-3db4-a9a7-e6a88681ed34" class="nav-dd">
           <a href="#" class="nav-link dd_link w-inline-block">
             <div>select a game</div>
@@ -108,7 +108,7 @@ ul.slick-dots {
           </a>
           <div style="height:0PX;opacity:0" class="dd-container"><a href="index.html" aria-current="page" class="dd-sub-link w--current">CoD: Warzone</a><a href="https://legionfarm.com/cod-mw" class="dd-sub-link">Call of Duty: Modern Warfare</a><a href="https://pwp.legionfarm.com/apex" class="dd-sub-link">Apex Legends</a><a href="https://pwp.legionfarm.com/eft" class="dd-sub-link">Escape from Tarkov</a><a href="https://legionfarm.com/d2" class="dd-sub-link">Destiny 2</a><a href="https://legionfarm.com/wow" class="dd-sub-link">World of Warcraft</a><a href="https://legionfarm.com/wow-shadowlands" class="dd-sub-link">WoW BFA / Shadowlands</a><a href="https://legionfarm.com/wow_classic" class="dd-sub-link">WoW Classic</a><a href="https://legionfarm.com/division-2" class="dd-sub-link">Division 2</a></div>
         </div>
-        <a href="https://job.legionfarm.com/" class="nav-link join">Job</a>
+        <!-- <a href="https://job.legionfarm.com/" class="nav-link join">Job</a> -->
         <a href="#" class="nav-link">log in</a>
       </div>
     </div>
@@ -217,7 +217,7 @@ ul.slick-dots {
               <div class="text-80 _1">Play agressive</div>
               <div class="frame1">
                 <div class="frame-img1">
-                  <video autoplay muted loop>
+                  <video autoplay muted loop id="myVideo">
                     <source src="images/video1.mp4" type="video/mp4">
                   </video>
                 </div>
