--- a/pwp/index.html
+++ b/pwp/index.html
@@ -217,7 +217,7 @@ ul.slick-dots {
               <div class="text-80 _1">Play agressive</div>
               <div class="frame1">
                 <div class="frame-img1">
-                  <video autoplay muted loop id="myVideo">
+                  <video autoplay muted loop>
                     <source src="images/video1.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -232,7 +232,11 @@ ul.slick-dots {
               <div class="text-block-4">Get</div>
               <div class="text-80 _1 _2">pro setup</div>
               <div class="frame1 _4">
-                <div class="frame-img1 _2"></div>
+                <div class="frame-img1 _2">
+                  <video autoplay muted loop>
+                    <source src="images/video2.mp4" type="video/mp4">
+                  </video>
+                </div>
               </div>
             </div>
             <div class="pc_col _3">
@@ -243,7 +247,11 @@ ul.slick-dots {
               <div class="text-block-4 _2">Master</div>
               <div class="text-80 _1 c3">Advanced Mechanics</div>
               <div class="frame1 _5">
-                <div class="frame-img1 _3"></div>
+                <div class="frame-img1 _3">
+                  <video autoplay muted loop>
+                    <source src="images/video3.mp4" type="video/mp4">
+                  </video>
+                </div>
               </div>
             </div>
             <div class="pc_col _4">
@@ -254,7 +262,11 @@ ul.slick-dots {
               <div class="text-block-4 _3">Prepare to</div>
               <div class="text-80 _1 _2">chill and joy</div>
               <div class="frame1 _6">
-                <div class="frame-img1 _4"></div>
+                <div class="frame-img1 _4">
+                  <video autoplay muted loop>
+                    <source src="images/video4.mp4" type="video/mp4">
+                  </video>
+                </div>
               </div>
             </div>
             <div class="pc_col _5">
