--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1578,7 +1578,7 @@ ul.slick-dots {
       <p class="paragraph-3">Would you like to sign up with your Google or Discord account?</p><a href="#" class="reg-button w-inline-block"><img src="images/reg-ic-1.svg" loading="eager" alt="" class="reg-ic"><div class="reg-btn-text">Continue with Google</div></a><a href="#" class="reg-button disk w-inline-block"><img src="images/reg-ic-2.svg" loading="eager" alt="" class="reg-ic"><div class="reg-btn-text">Continue with Discord</div></a></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f5cfeeb0084a92f6ae3a595" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script defer src="js/webflow.js" type="text/javascript"></script>
     <script src="js/dynamic-adaptive.js"></script>  
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script>
