--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1440,7 +1440,9 @@ ul.slick-dots {
         </div>
         <div class="block2">
           <div class="frame1 _3">
-            <div class="frame-img2"></div>
+            <img class="team-img" src="images/team.jpg" loading="lazy" alt="">
+            <div class="frame-img2">
+            </div>
           </div>
           <div class="frame-text">
             <div class="text-80">we are</div>
