--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1511,7 +1511,9 @@
         </div>
         <div class="bg-line2"></div>
         <div class="ft-col _3">
-          <div class="frame-img3"></div>
+          <div class="frame-img3">
+            <img src="images/footer-bg-min.jpg" loazing="lazy" width="100%" height="100%" alt="">
+          </div>
         </div>
       </div>
     </div>
