--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1603,7 +1603,7 @@
         </div>
         <div class="block2">
           <div class="frame1 _3">
-            <img class="team-img" src="images/team.jpg" loading="lazy" alt="">
+            <img class="team-img" src="images/team.jpg" loading="lazy" height="auto" alt="">
             <div class="frame-img2">
             </div>
           </div>
