--- a/pwp2/index.html
+++ b/pwp2/index.html
@@ -29,7 +29,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N8RZCRH');</script>
   <!--  End Google Tag Manager  -->
-  <link rel="stylesheet" type="text/css" href="https://www.dl.dropboxusercontent.com/s/z0s1ddmya4icf71/slick.css">
   <style>
 .team .pers-img-2 {
   /*animation: move_out_15 .2s ease-in forwards;*/
@@ -1487,4 +1486,5 @@ $('.ticker').slick({
 </script>
 </body>
 <link href="css/normalize.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="css/slick.css">
 </html>
