--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1904,7 +1904,7 @@ function CheckInput(e) {
   }
   </style>
 
-<script>
+<!-- <script>
   function setBackground() {
   let a = document.querySelector('.section._1s')
   a.classList.add('mob-bg')
@@ -1912,4 +1912,4 @@ function CheckInput(e) {
 
 setTimeout(setBackground, 3000);
 
-</script>
+</script> -->
