--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1288,13 +1288,22 @@
               <div class="text-80 _1">Play agressive</div>
               <div class="frame1">
                 <div class="frame-img1">
-                    <div data-poster-url="videos/movement-min-opt-poster-00001.jpg" data-video-urls="videos/movement-min-opt-transcode.mp4,videos/movement-min-opt-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="gif w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/movement-min-opt-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-                      <source src="images/video1.mp4" data-wf-ignore="true">
-                      <source src="images/video1.webm" data-wf-ignore="true">
-                    </video></div><img src="images/skill-img-1.jpg" loading="eager" sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 670.7568359375px, 100vw" srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img">
-                  <!-- <video autoplay muted loop>
+                    <!-- <div data-poster-url="videos/movement-min-opt-poster-00001.jpg"
+                      data-video-urls="videos/movement-min-opt-transcode.mp4,videos/movement-min-opt-transcode.webm" data-autoplay="true"
+                      data-loop="true" data-wf-ignore="true" class="gif w-background-video w-background-video-atom">
+                      <video autoplay=""
+                        loop="" style="background-image:url(&quot;videos/movement-min-opt-poster-00001.jpg&quot;)" muted="" playsinline=""
+                        data-wf-ignore="true" data-object-fit="cover">
+                        <source src="images/video1.mp4" data-wf-ignore="true">
+                        <source src="images/video1.webm" data-wf-ignore="true">
+                      </video></div><img src="images/" loading="eager"
+                      sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 670.7568359375px, 100vw"
+                      srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img"> -->
+                  <video autoplay muted loop>
                     <source src="images/video1.mp4" type="video/mp4">
-                  </video> -->
+                        <source src="images/video1.mp4" data-wf-ignore="true">
+                        <source src="images/video1.webm" data-wf-ignore="true">
+                  </video>
                 </div>
 
               </div>
